Update README with info about this repo

--- a/README
+++ b/README
@@ -1,3 +1,16 @@
+# dmenu_schuam
+
+This is my patched version of [dmenu](https://tools.suckless.org/dmenu/). I
+cloned the origianl git repo with
+
+``` git clone https://git.suckless.org/dmenu ```
+
+and than patched it with some patches found
+[here](https://tools.suckless.org/dmenu/patches/).
+
+The content of the original README file can be found below.
+
+
 dmenu - dynamic menu
 ====================
 dmenu is an efficient dynamic menu for X.
